--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "gulp-nodemon": "^2.4.2"
   },
   "scripts": {
-    "test": "npm run test-local1",
+    "test": "npm run test-prac1",
     "test-local1": "SET NODE_ENV=local&& gulp build && node dist/index",
+    "test-prac1": "gulp build && node dist/tests/prac1_promisemap/index",
     "prestart": "npm install && gulp build",
     "start": "node dist/index",
     "prebuild": "npm ci",
