--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongo": "^0.1.0",
     "mongoclient": "^1.0.3",
     "mongodb": "^3.1.13",
+    "mongoose": "^5.4.19",
     "pino": "^5.11.1",
     "websocket": "^1.0.28"
   },
