--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
+    "@types/mongoose": "^5.3.23",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-nodemon": "^2.4.2"
